# libdesock

./: .gitignore  LICENSE  README.md  meson.build  meson_options.txt  run-tests.sh
examples/bind9/: README.md
examples/cupsd/: README.md
examples/exim/: README.md
examples/nginx/: README.md
examples/openssh/: README.md
examples/openvpn/: README.md
examples/redis/: README.md
examples/vsftpd/: README.md
include/: desock.h  stub_sockaddr.h  syscall.h  util.h
libdesock/include/: desock.h  hooks.h  multi.h  musl-features.h  peekbuffer.h  syscall.h
libdesock/src/: accept.c  bind.c  close.c  connect.c  desock.c  dup.c  epoll.c  getpeername.c  getsockname.c  hooks.c  listen.c  multi.c  peekbuffer.c  poll.c  read.c  select.c  sendfile.c  shutdown.c  socket.c  sockopt.c  syscall.c  write.c
src/: accept.c  bind.c  close.c  connect.c  desock.c  dup.c  epoll.c  getpeername.c  getsockname.c  hooks.c  listen.c  main.c  multi.c  peekbuffer.c  poll.c  read.c  select.c  sendfile.c  shutdown.c  socket.c  sockopt.c  stub_sockaddr.c  syscall.c  test_helper.c  write.c
src/include/: desock.h  hooks.h  multi.h  musl-features.h  peekbuffer.h  syscall.h  test_helper.h  util.h
tests/: .gitignore  Makefile  README.md  desock.py  get-coverage.py  helper.py  main.c  run.sh  test_accept.c  test_accept.py  test_bind.py  test_dup.py  test_epoll.c  test_epoll.py  test_metadata.py  test_multi.c  test_multi_read.py  test_peekbuffer.py  test_poll.c  test_poll.py  test_read.py  test_select.c  test_select.py  test_sendfile.py  test_standard.py  test_threads.c  test_write.py  tests.h
